Moving JS apps over

--- a/_includes/archive.njk
+++ b/_includes/archive.njk
@@ -5,8 +5,10 @@ title: Archive
 ---
 
 <header id="hero">
-  <p class="faded">
-    Here's some stuff I've written.
+  <p>
+    <strong class="faded">
+      Here's some stuff I've written.
+    </strong>
   </p>
 </header>
 
