--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,8 @@ a {
 
 nav {
   display: grid;
-
   grid-auto-flow: column;
-  grid-auto-columns: 20%;
-
-  width: 100%;
+  width: 50%;
 }
 
 nav a {
@@ -67,10 +64,6 @@ nav a:hover::after {
 nav a.current::after {
   background: var(--text-body-link-color);
 }
-
-/* nav a.current {
-  background-color: rgba(0, 0, 0, 0.03);
-} */
 
 #main-header, #main-section {
   padding: 3.5rem 3.5rem 1rem 3.5rem;
@@ -119,6 +112,53 @@ footer {
   margin-top: 2.0rem;
 }
 
+/* Link blog */
+
+.link-blog ul {
+  list-style: none;
+
+  padding: 0;
+  margin: 1.0rem 0 0 0;
+
+  --min: 40%;
+  --gap: 1.5rem;
+
+  display: grid;
+  grid-gap: var(--gap);
+
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
+}
+
+.link-blog li {
+  margin: 0;
+  padding: 0;
+}
+
+.link-blog .comment::after {
+  content: ' ';
+}
+
+.link-blog aside {
+  display: inline;
+  font-size: 0.9rem;
+}
+
+.link-blog a {
+  text-decoration: none;
+}
+
+.link-blog a .comment {
+  color: var(--text-body-color);
+}
+
+.link-blog a aside {
+  color: var(--text-faded-color);
+}
+
+.link-blog h2 {
+  color: var(--pink-lavender);
+}
+
 /* Blog posts */
 
 header h1, header h2 {
@@ -133,6 +173,7 @@ h1 a, h2 a, h3 a {
 
 article h1 {
   font-size: 3.0rem;
+  color: 
 }
 
 article p, article ul, article ol {
@@ -203,7 +244,7 @@ figure.wide {
 
 @media only screen and (max-width : 480px) {
   header#hero {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
   }
 
   .inline-portrait {
@@ -250,5 +291,6 @@ figure.wide {
   .link-blog li {
     min-width: none;
     max-width: none;
+    margin-bottom: 1.0rem;
   }
 }
