--- a/_includes/archive.njk
+++ b/_includes/archive.njk
@@ -13,7 +13,7 @@ title: Archive
 </header>
 
 {%- for post in collections.post | reverse -%}
-<article>
+<article class="readable-width">
   <header>
     <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
   </header>
