--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -31,7 +31,7 @@
       {%- endfor -%}
     </nav>
     <nav id="social">
-      <a target="_blank" class="mastodon" href="https://tech.lgbt/@miked" alt="Mastodon"><img src="/images/social/mastodon.svg"></a>
+      <a target="_blank" class="mastodon" href="https://masto.ai/@miked" rel="me" alt="Mastodon"><img src="/images/social/mastodon.svg"></a>
       <a target="_blank" class="twitter" href="https://twitter.com/miked" alt="Twitter"><img src="/images/social/icons8-twitter.svg"></a>
       <a target="_blank" class="github" href="https://github.com/mike-douglas" alt="Github"><img src="/images/social/icons8-github.svg"></a>
       <a target="_blank" class="instagram" href="https://instragram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
