Recolor, moving socials to bottom of page.

--- a/_includes/archive.njk
+++ b/_includes/archive.njk
@@ -4,11 +4,10 @@ tags: page
 title: Archive
 ---
 
-<header id="hero">
+<header>
+  <h1>Blog Archive</h1>
   <p>
-    <strong class="faded">
-      Here's some stuff I've written.
-    </strong>
+    Here's some stuff that I've written.
   </p>
 </header>
 
