--- a/_includes/main-level-page.njk
+++ b/_includes/main-level-page.njk
@@ -2,10 +2,10 @@
 layout: page.njk
 ---
 
-<header>
-  <h1>{{ pageTitle }}</h1>
+<header id="section-header">
+  <h1>{{ title }}</h1>
   <p>
-    {{ pageDescription }}
+    {{ excerpt }}
   </p>
 </header>
 
