--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -1,3 +1,8 @@
+---
+title: 
+excerpt: 
+ogType: website
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +11,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="{{ excerpt }}">
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  {# <script src="/scripts/vis.js"></script> #}
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:site" content="@miked" />
+  <meta property="twitter:title" content="{{ title }}" />
+  <meta property="twitter:description" content="{{ excerpt }}" />
+  {% if feature %}
+  <meta property="twitter:image" content="https://miked.codes{{ feature }}" />
+  {% endif %}
+
+  <meta property="og:type" content="{{ ogType }}" />
+  <meta property="og:title" content="{{ title }}" />
+  <meta property="og:description" content="{{ excerpt }}" />
+  <meta property="og:url" content="https://miked.codes/" />
+  {% if feature %}
+  <meta property="og:image" content="https://miked.codes{{ feature }}" />
+  {% endif %}
+
+  <link rel="stylesheet" href="/css/style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
@@ -19,17 +39,20 @@
       }
   </style>
 
-  <title>miked.codes - {{ title }}</title>
+  <title>miked.codes: {{ title }}</title>
 </head>
 <body>
   <header id="main-header">
     <nav id="site" role="navigation">
       {%- for navPage in collections.page -%}
       <a {% if page.url == navPage.url %} aria-current="page" class="current"{% endif %} href="{{ navPage.url }}">
-        {{ navPage.data.title }}
+        {{ navPage.data.navTitle }}
       </a>
       {%- endfor -%}
     </nav>
+    <div class="right">
+      <span class="portrait"></span>
+    </div>
   </header>
   <section id="main-section">
     {{ content | safe }}
@@ -42,7 +65,7 @@
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
     <center>
-      ✨
+      <h1>✨</h1>
     </center>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
