--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@
   --subtitle-color: var(--light-coral);
   --link-color: var(--morning-blue);
   --link-highlight: var(--catawba);
+  --divider-color: rgba(0, 0, 0, 0.1);
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 115%;
+
   padding: 1.0rem;
   margin: 0;
 
@@ -32,6 +34,10 @@ body {
 
 a {
   color: var(--link-color);
+}
+
+a:hover {
+  opacity: 0.50;
 }
 
 h1 {
@@ -65,7 +71,10 @@ nav#social {
 nav#social a img {
   width: 32px;
   height: 32px;
-  opacity: 0.1;
+
+  opacity: 0.6;
+
+  filter: invert(63%) sepia(11%) saturate(1908%) hue-rotate(314deg) brightness(97%) contrast(95%);
 }
 
 nav#social a.mastodon img {
@@ -78,8 +87,8 @@ nav#social a.mastodon img {
 }
 
 #main-header {
-  display: flex;
-  vertical-align: middle;
+  display: grid;
+  grid: 50% / auto-flow;
 }
 
 #main-section {
@@ -90,26 +99,53 @@ header#hero {
   font-size: 3.0rem;
 }
 
+header#hero p {
+  line-height: normal;
+}
+
 header#hero strong {
   font-weight: 600;
+}
+
+header#section-header:after {
+  content: '';
+
+  border-bottom: 1px solid;
+  border-color: var(--divider-color);
+
+  margin-left: -0.25rem;
+  margin-bottom: 1.5rem;
+
+  padding-bottom: 1.0rem;
+
+  width: 4.0rem;
+
+  display: block;
 }
 
 .portrait {
   background: url('/images/me2.jpeg');
   background-size: 100px 100px;
+
   width: 100px;
   height: 100px;
+
   border-radius: 50%;
+
   display: inline-block;
 }
 
 .inline-portrait {
   background: url('/images/me2.jpeg');
   background-size: 75px 75px;
+
   width: 75px;
   height: 75px;
+
   border-radius: 50%;
+
   display: inline-block;
+
   vertical-align: middle;
 }
 
@@ -123,6 +159,10 @@ header#hero strong {
 
 .ultra-faded {
   color: var(--caption2-color);
+}
+
+.right {
+  text-align: right;
 }
 
 footer {
@@ -192,7 +232,7 @@ article h1 {
   font-size: 3.0rem;
 }
 
-article p, article ul, article ol {
+#main-section p, section, article p, article ul, article ol {
   line-height: 1.9rem;
 }
 
@@ -272,14 +312,13 @@ figure.wide {
   nav#site {
     align-items: flex-start;
     flex-direction: column;
-    gap: 1.0rem;
+    gap: 0.5rem;
   }
 
   nav#site a {
-    font-size: 1.0rem;
+    font-size: 1.15rem;
     padding: 0;
     margin: 0;
-    flex-direction: row;
   }
 
   nav#site a::after {
