--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -51,35 +51,27 @@ ogType: website
   <title>miked.codes: {{ title }}</title>
 </head>
 <body>
-  <header id="main-header">
-    <nav id="site" role="navigation">
-      {%- for navPage in collections.page -%}
-      <a {% if page.url == navPage.url %} aria-current="page" class="current"{% endif %} href="{{ navPage.url }}">
-        {{ navPage.data.navTitle }}
-      </a>
-      {%- endfor -%}
-    </nav>
-    <div class="right">
-      <span class="portrait"></span>
-    </div>
-  </header>
-  <section id="main-section">
-    {{ content | safe }}
-  </section>
-  <footer>
-    <nav id="social">
+  <header>
+    <span class="portrait"></span>
+    <nav>
       <a target="_blank" class="mastodon" href="https://masto.ai/@miked" rel="me" alt="Mastodon"><img src="/images/social/mastodon.svg"></a>
       <a target="_blank" class="twitter" href="https://twitter.com/miked" alt="Twitter"><img src="/images/social/icons8-twitter.svg"></a>
       {# <a target="_blank" class="atom / rss feed" href="/feed.xml" alt="Atom / RSS Feed"><img src="/images/social/rss-feed.svg"></a> #}
       <a target="_blank" class="github" href="https://github.com/mike-douglas" alt="Github"><img src="/images/social/icons8-github.svg"></a>
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
+  </header>
+  <section id="main">
+    <h1>{{ title }}</h1>
+    {{ content | safe }}
+  </section>
+  <footer>
+    
     <center>
       <h1>✨</h1>
     </center>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/autoloader/prism-autoloader.min.js" integrity="sha512-fTl/qcO1VgvKtOMApX2PdZzkziyr2stM65GYPLGuYMnuMm1z2JLJG6XVU7C/mR+E7xBUqCivykuhlzfqxXBXbg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="/scripts/app.js"></script>
 </body>
 </html>
